# strength-estimator

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
cfg/: sa_chess_mcts.cfg  sa_go_mcts.cfg  se_chess.cfg  se_chess_mcts.cfg  se_go.cfg  se_go_mcts.cfg  se_infty_chess.cfg  se_infty_chess_mcts.cfg  se_infty_go.cfg  se_infty_go_2_rank.cfg  se_infty_go_3_rank.cfg  se_infty_go_mcts.cfg  sl_chess.cfg  sl_sum_chess.cfg  sl_sum_go.cfg  sl_vote_chess.cfg  sl_vote_go.cfg
minizero/minizero/environment/: CMakeLists.txt  environment.h
minizero/minizero/environment/chess/: bitboard.cpp  bitboard.h  bititer.h  board.cpp  board.h  chess.cpp  chess.h  hashcat.h  position.cpp  position.h
minizero/scripts/: build.sh
scripts/: board.py  build.sh  classify_qc.py  data.py  eval.sh  fight.sh  plot.py  preprocess_games.sh  random_sample.py  sgf_filter_random_sample.py  start-container.sh  train.sh
strength/: CMakeLists.txt  main.cpp  st_mode_handler.cpp  st_mode_handler.h
strength/misc/: CMakeLists.txt  evaluator.cpp  evaluator.h  game_wrapper.cpp  game_wrapper.h  st_actor.cpp  st_actor.h  st_actor_group.cpp  st_actor_group.h  st_configuration.cpp  st_configuration.h  st_console.cpp  st_console.h  st_mcts.cpp  st_mcts.h  strength_network.h
strength/trainer/: CMakeLists.txt  bt_network.py  create_network.py  pybind.cpp  rank_network.py  st_data_loader.cpp  st_data_loader.h  train.py
